2 fixes
(Hopefully) fixed animated posts flair thing being way too big when in the little child window thing
I'm good with wordssss

Also fixed/tweaked the blacklisted banner not fully covering up the "You cannot view this image" text on a deleted image.

(hopefully the author thing actually works, the Stylus wiki doesn't say explicitly if you can or not soooooo)

--- a/release/eSixCafe.user.css
+++ b/release/eSixCafe.user.css
@@ -1,9 +1,9 @@
 /* ==UserStyle==
 @name           eSix Café
 @namespace      mandorinn
-@version        1.3.2
+@version        1.3.3
 @description    A muted and easy on the eyes style for e621. Big credits to Faucet for the bug reports so far, thank you!
-@author         mandorinn (www.mandorinn.dev)
+@author         mandorinn (www.mandorinn.dev), faucet 
 @updateURL		https://github.com/mandorinn/eSix-Cafe/raw/main/release/eSixCafe.user.css
 @preprocessor stylus
 
@@ -1680,6 +1680,7 @@ if themep == classic {
 		align-items: center!important;
 		justify-content: center!important;
 		font-size: 1.3rem;
+		width: 100%;
 		height: 100%;
 		aspect-ratio: 1/1;
 		}	
@@ -1695,7 +1696,6 @@ if themep == classic {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	height: 100%;
 	position: relative;
 	img {
 		opacity: 0;
@@ -1710,9 +1710,9 @@ if themep == classic {
 	align-items: center!important;
 	justify-content: center!important;
 	font-size: 1.3rem;
-	height: 100%;
 	bottom: 0;
 	opacity: 1;
+	height: 100%;
 	width: 95%;
 	aspect-ratio: 1/1;
 	}
@@ -1830,7 +1830,12 @@ if themep == classic {
     background-color: var(--bg-300)!important;
     color: var(--base-text)!important;
     border: 2px solid var(--bg-400)!important;
-    left: .5rem;
+    right: .5rem;
+	left: auto;
+	top: .5rem;
+	position:absolute;
+	height: 20px;
+	width: 20px;
 	}
 	/* Editing mode */ 
 	div#c-posts div#a-show #edit .edit-submit {
